--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/form_intento.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/form_intento.html.twig
@@ -41,7 +41,7 @@
              '{% endif %}>
           <tr>
              <th class="hidden-xs{% if numIntentos == 1 %} hidden{% endif %}"><abbr title="Número de intento"># int.</abbr></th>
-             <th colspan="2">Marca{% if numIntentos == 1 %} <small class="text-muted">(Horas / minutos / segundos / milésimas)</small>{% endif %}</th>
+             <th colspan="2">Marca{% if unidades == "segundos" %} <small class="text-muted">(Horas / minutos / segundos / milésimas)</small>{% endif %}</th>
              {% if numIntentos > 1 %}<th>Validez<div class="text-muted" style="font-size: 10px;"><abbr title="Intentos inválidos máximos para fijar marca">I. máx.</abbr>: <span id="max-num-int">{{ numIntentos }}</span></div></th>{% endif %}
              <th>Premios</th>
              {% if numIntentos > 1 %}
