--- a/src/Easanles/AtletismoBundle/Resources/views/TipoPrueba/form_tipopruebaformato.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/TipoPrueba/form_tipopruebaformato.html.twig
@@ -30,7 +30,7 @@
     </div>
     
     <div class="subform panel panel-default">
-       <div class="panel-heading">MODALIDADES<button type="button" class="btn btn-default btn-sm pull-right" onClick="addFormRow()"><span class="glyphicon glyphicon-plus" aria-label="Añadir"></span> Añadir</button><div class="clearfix"></div></div>
+       <div class="panel-heading">MODALIDADES<button type="button" class="btn btn-default btn-sm pull-right" onClick="addFormRow(); addAutoComplete('.subform-row input', null)"><span class="glyphicon glyphicon-plus" aria-label="Añadir"></span> Añadir</button><div class="clearfix"></div></div>
        <div class="panel-body">
           <table class="table-responsive table-condensed">
              <tbody id="form-collection" data-prototype='
