--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Título por defecto{% endblock %}</title>
         <link rel="stylesheet" href="{{ asset('bundles/bootstrap-3.3.2-dist/css/bootstrap.min.css') }}" media="screen"/>
+        <link rel="stylesheet" href="{{ asset('bundles/jQuery-autoComplete-master/jquery.auto-complete.css') }}" media="screen"/>
         {% block css %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -13,6 +14,7 @@
         {% block body %}{% endblock %}
         
         <script src="{{ asset('bundles/jquery/jquery-1.11.3.min.js') }}"></script>
+        <script src="{{ asset('bundles/jQuery-autoComplete-master/jquery.auto-complete.min.js') }}"></script>
         <script src="{{ asset('bundles/bootstrap-3.3.2-dist/js/bootstrap.min.js') }}"></script>
         {% block js %}{% endblock %}
     </body>
