--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -49,8 +49,8 @@
          <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                {% block navbar %}
-               <li><a href="{{ path('listado_atletas') }}">Atletas</a></li>
-               <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
+               {% if app.user is not null and is_granted('ROLE_ADMIN') %}<li><a href="{{ path('listado_atletas') }}">Atletas</a></li>{% endif %}
+               {% if app.user is not null and is_granted('ROLE_ADMIN') %}<li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>{% endif %}
                <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Records <span class="caret"></span></a>
                   <ul class="dropdown-menu">
@@ -58,20 +58,46 @@
                      <li><a href="{{ path('pantalla_records_fem') }}">Records femeninos</a></li>
                   </ul>
                </li>
-               <li class="dropdown">
+               {% if app.user is not null and is_granted('ROLE_ADMIN') %}<li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Informes <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                      <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
                      <li><a class="inactive" href="#">Asistencia a eventos</a></li>
                      <li><a class="inactive" href="#">Pagos</a></li>
                   </ul>
-               </li>
-               <li><a href="{{ path('configuracion') }}">Configuración</a></li>
+               </li>{% endif %}
+               {% if app.user is not null and is_granted('ROLE_ADMIN') %}<li><a href="{{ path('configuracion') }}">Configuración</a></li>{% endif %}
                {% endblock %}
             </ul>
-            <ul class="navbar-text pull-right">
-               Bienvenido, <a class="navbar-link inactive">Admin</a>
+            {% block userAuth %}
+            <ul class="nav navbar-nav navbar-right">
+               {% if app.user is not null and is_granted('IS_AUTHENTICATED_FULLY') %}
+               <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ app.user.username }} <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                     <li><a href="{{ path('logout') }}">Logout</a></li>
+                     <li><a class="inactive" href="#">Datos</a></li>
+                  </ul>
+               </li>
+               {% else %}
+               <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login <span class="caret"></span></a>
+                  <div class="dropdown-menu">
+                     <form id="login-form" action="{{ path('login_check') }}" method="post">
+                        <input class="form-control input-sm" type="text" id="username" name="_username" placeholder="Usuario">
+                        <input class="form-control input-sm" type="password" id="password" name="_password" placeholder="Contraseña">
+                        <div class="checkbox"><label><input type="checkbox" value=""><small>Recordarme</small></label></div>
+                        <button class="btn btn-sm btn-primary btn-block" type="submit">Enviar</button>
+                        <p><small class="muted-text">
+                           user: "userpass"<br>
+                           admin: "adminpass"
+                        </small></p>
+                     </form>
+                  </div>
+               </li>
+               {% endif %}
             </ul>
+            {% endblock %}
          </div><!--/.nav-collapse -->
       </div>
    </nav>
@@ -79,7 +105,7 @@
     <div class="container">
        <ol class="breadcrumb">
        {% block breadcrumb %}
-          <li class="active">Portada Admin</li>
+          <li class="active">Portada{% if role == "admin" %} Admin{% endif %}</li>
        {% endblock %}
        </ol>
        {% block dumpv %}{% if dumpv is defined %}{{ dump(dumpv) }}{% endif %}{% endblock %}
