--- a/src/Easanles/AtletismoBundle/Resources/views/Usuario/list_usuario.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Usuario/list_usuario.html.twig
@@ -2,7 +2,7 @@
                   <tr>
                      <th>Usuario</th>
                      <th>Rol</th>
-                     <th><abbr title="Atleta asociado" class="visible-xs-block">Atl.</abbr><div class="hidden-xs">Atleta asociado</div></th>
+                     <th><abbr title="Atleta asociado" class="visible-xs-block">Atleta</abbr><div class="hidden-xs">Atleta asociado</div></th>
                      <th><abbr title="Acciones" class="visible-xs-block">Acc.</abbr><div class="hidden-xs">Acciones</div></th>
                   </tr>
                   {% for usu in usuarios %}
