--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/form_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/form_atleta.html.twig
@@ -170,7 +170,13 @@
 {% endblock %}
 
 {% block js %}
-
-
+   <script src="{{ asset('bundles/atletismo/js/scripts.js') }}"></script>
+   <script type="text/javascript">
+      var autoCompleteData = [];
+      {% for bloque in bloques %}
+         autoCompleteData.push('{{ bloque }}');
+      {% endfor %}
+      addAutoComplete('#atl_bloque', autoCompleteData);
+   </script>
 {% endblock %}
 
