Editar y borrar usuarios

--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -88,7 +88,7 @@
                      <form id="login-form" action="{{ path('login_check') }}" method="post" style="width: 15em">
                         <input class="form-control" type="text" id="username" name="_username" placeholder="Usuario">
                         <input class="form-control" type="password" id="password" name="_password" placeholder="Contraseña">
-                        <div class="checkbox"><label><input type="checkbox" id="remember_me" name="_remember_me"><small>Recordarme</small></label></div>
+                        <div class="checkbox"><label><input type="checkbox" id="remember_me" name="_remember_me" checked><small>Recordarme</small></label></div>
                         <button class="btn btn-primary btn-block" type="submit">Entrar</button>
                         <p><small class="muted-text">
                            user: "userpass"<br>
