--- a/src/Easanles/AtletismoBundle/Resources/views/Default/login.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/login.html.twig
@@ -61,7 +61,7 @@
        </div>
        <div class="checkbox">
           <label>
-             <input type="checkbox" id="remember_me" name="_remember_me"> Recordarme
+             <input type="checkbox" id="remember_me" name="_remember_me" checked> Recordarme
           </label>
        </div>
 
