--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -48,15 +48,10 @@
       <div id="tabcontent-usu" class="tabcontent" style="display:none">
          <div class="row">
             <button type="button" class="btn btn-primary" onClick="showModal('newUSU', null, null, null)"><span class="glyphicon glyphicon-plus"></span> Añadir</button>
-            <button class="btn btn-default updater hidden" onClick="loadViews('usu')"><span class="glyphicon glyphicon-refresh spinning"></span></button>
-            <div class="input-group col-xs-5 col-sm-4 pull-right">
+            <button id="updater-usu" class="btn btn-default updater hidden" onClick="loadViews('usu')"><span class="glyphicon glyphicon-refresh spinning"></span></button>
+            <div class="input-group col-xs-6 col-sm-4 pull-right">
                <input disabled id="search-input" type="search" class="form-control" placeholder="Buscar"{% if query is defined %} value="{{query}}"{% endif %} onkeydown="checkEnterKeypress(event)">
                <div class="input-group-btn"><button disabled id="search-button" class="btn btn-default" type="button" onClick="usuSearch()"><span class="glyphicon glyphicon-search"></span></button></div>
-            </div>
-            <div class="col-xs-4 col-sm-3 pull-right">
-               <select class="form-control">
-                  <option>Todos</option>
-               </select>
             </div>
          </div>
          <div class="row">
@@ -67,7 +62,7 @@
       <div id="tabcontent-tp" class="tabcontent" style="display:none">
          <div class="row">
             <button type="button" class="btn btn-primary" onClick="showModal('newTPR', null, null, null)"><span class="glyphicon glyphicon-plus"></span> Añadir</button>
-            <button class="btn btn-default updater hidden" onClick="loadViews('tp')"><span class="glyphicon glyphicon-refresh spinning"></span></button>
+            <button id="updater-tp" class="btn btn-default updater hidden" onClick="loadViews('tp')"><span class="glyphicon glyphicon-refresh spinning"></span></button>
          </div>
          <div class="row">
             <table id="tpr-table" class="table table-hover table-bordered table-condensed table-striped table-responsive"></table>
@@ -77,7 +72,7 @@
       <div id="tabcontent-cat" class="tabcontent" style="display:none">
          <div class="row">
             <button type="button" class="btn btn-primary" onClick="showModal('newCAT', null, null, null)"><span class="glyphicon glyphicon-plus"></span> Añadir</button>
-            <button class="btn btn-default updater hidden" onClick="loadViews('cat')"><span class="glyphicon glyphicon-refresh spinning"></span></button>
+            <button id="updater-cat" class="btn btn-default updater hidden" onClick="loadViews('cat')"><span class="glyphicon glyphicon-refresh spinning"></span></button>
             <label class="checkbox-inline pull-right"><input id="cat-showOutdated" type="checkbox" onClick="loadViews('cat')"> Mostrar categorías caducadas</label>
          </div>
          <div class="row">
