--- a/src/Easanles/AtletismoBundle/Resources/views/Usuario/form_usuario.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Usuario/form_usuario.html.twig
@@ -8,7 +8,7 @@
 {% if mode == "new" %}
 {{ form_start(form, {'action': path('crear_usuario')}) }}
 {% elseif mode == "edit" %}
-{{ form_start(form, {'action': path('editar_usuario', {'id': id})}) }}
+{{ form_start(form, {'action': path('editar_usuario', {'nombre': nombre})}) }}
 {% endif %}
 
     {{ form_errors(form) }}
@@ -30,7 +30,7 @@
              <div class="input-group">
                 {{ form_widget(form.idAtl) }}
                 <span class="input-group-btn">
-                   <button class="btn btn-default" type="button" data-toggle="tooltip" data-placement="top" title="Comprobar" onClick="checkIdAtl('{{ path("comprobar_id_atleta")}}', $('#usu_idAtl').val())"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                   <button class="btn btn-default" type="button" data-toggle="tooltip" data-placement="top" title="Comprobar si existe" onClick="checkIdAtl('{{ path("comprobar_id_atleta")}}', $('#usu_idAtl').val())"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
                 </span>
              </div>
              {{ form_errors(form.idAtl) }}
